# ric-xapps-malicious-detection

./: .env  .gitmodules  Dockerfile.e2mgr.simple  Dockerfile.e2term.simple  Dockerfile.nearrt-ric  Dockerfile.ran-sim  Dockerfile.ran-sim.alpine  Dockerfile.ran-sim.simple  Dockerfile.rtmgr.simple  Dockerfile.xapp  Dockerfile.xapp.alpine  Dockerfile.xapp.simple  PROJECT_SUMMARY.md  README.md  ditg_Dockerfile  docker-compose.yml  generate_experiments.py  generate_malicious_experiments.py  gnb_zmq.yaml  kpm5_xapp.py  run_enhanced.sh  srsRAN_4G_Dockerfile  ue_zmq.conf
.github/: copilot-instructions.md
analysis/: openran_data_analysis.ipynb
config/nearrt-ric/: ric-plt-e2.conf
config/nonrt-ric/: application.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  openran-overview.json  openran-realtime.json  openran-ric-performance.json  openran-security.json  openran-xapp-analytics.json
openran/my-srsproject-demo/config/: gnb_zmq.yaml
openran/my-srsproject-demo/multi-ue-setup/: 2  multi_ue_scenario.grc  multi_ue_scenario.py  ue1_zmq.conf  ue1_zmq.conf.save  ue2_zmq.conf.save
openran/oran-sc-ric/: docker-compose.yml
openran/srsRAN_Project/configs/: gnb_zmq.yaml  gnb_zmq.yml
openran/srsRAN_Project/docker/: docker-compose.yml
ran-sim/config/: e2sim.conf
scripts/: attack_simulator.py  build.sh  dataset_integrator.py  enhanced_data_generator.py  generate_data.py  generate_data_simple.py  logs.sh  metrics_exporter.py  start-core.sh  start.sh  stop.sh
xapp/config/: config.json
xapp/src/: CMakeLists.txt  main.cpp
(+24 files in other folders)
